--- a/src/app/centroeducativo/empresa/empresa.page.html
+++ b/src/app/centroeducativo/empresa/empresa.page.html
@@ -13,14 +13,13 @@
 <ion-content>
   <div id="divsearch">
     <!--Busqueda y filtrado de empresas-->
-    <ion-searchbar id="searchempresa" placeholder="Buscar"></ion-searchbar>
+    <ion-searchbar id="searchempresa" placeholder="Buscar" animated (ionChange)="handleChange($event)"></ion-searchbar>
     <!--Botón para agregar una nueva empresa-->
-    <ion-button (click)="this.nuevaempresa()" style="zoom:1.25"><ion-icon
-        name="duplicate-outline"></ion-icon></ion-button>
+    <ion-button (click)="nuevaempresa()" style="zoom:1.25"><ion-icon name="duplicate-outline"></ion-icon></ion-button>
   </div>
-<!--Lista de objetos de tipo empresa que al seleccionar un "ion-card" se abra un modal con el contenido de esa empresa en concreto-->
+  <!--Lista de objetos de tipo empresa que al seleccionar un "ion-card" se abra un modal con el contenido de esa empresa en concreto-->
   <div id="divlist">
-    <ion-card id="open-modal" *ngFor="let lista of this.listEmpresa;let i=index" (click) ="this.editaempresa(lista)">
+    <ion-card id="open-modal" *ngFor="let lista of this.filter;let i=index" (click)="this.editaempresa(lista)">
       <img src="assets/add.png" style="z-index: -1;" />
       <ion-card-header>
         <ion-card-title>{{lista.nombre}}</ion-card-title>
