--- a/src/app/empresa/tareas/tareas.page.html
+++ b/src/app/empresa/tareas/tareas.page.html
@@ -22,6 +22,7 @@
       <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
       <ion-card-header>
         <ion-card-title>{{tarea.tarea}}</ion-card-title>
+        <ion-card-subtitle>{{tarea.id_periodo}}</ion-card-subtitle>
       </ion-card-header>
     </ion-card>
   </div>
