--- a/src/app/pages/edit-ce/edit-ce.page.html
+++ b/src/app/pages/edit-ce/edit-ce.page.html
@@ -5,26 +5,29 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-list>
-    <div style="display: flex; flex-direction: row;">
-      <ion-icon color="danger" *ngIf="editable=='false'" name="trash" style="zoom:1.5"></ion-icon>
-    </div>
-    <ion-item>
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Documento</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-      
-    <ion-item>
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input type="email"></ion-input>
-    </ion-item>
-  </ion-list>
+  <form *ngIf="dUserCE">
+    <ion-list>
+      <div style="display: flex; flex-direction: row;">
+        <ion-icon color="danger" *ngIf="editable=='false'" name="trash" style="zoom:1.5"></ion-icon>
+      </div>
+      <ion-item>
+        <ion-label position="floating">Nombre</ion-label>
+        <ion-input type="text" [(ngModel)]="dUserCE.nombre"></ion-input>
+      </ion-item>
 
-  <ion-button>Update</ion-button>
+      <ion-item>
+        <ion-label position="floating">Documento</ion-label>
+        <ion-input type="text"[(ngModel)]="dUserCE.doc"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Correo electrónico</ion-label>
+        <ion-input type="email" [(ngModel)]="dUserCE.correo"></ion-input>
+      </ion-item>
+    </ion-list>
+
+    <ion-button type="submit" (click)="updateUserCE()">Update</ion-button>
+  </form>
 
 </ion-content>
