--- a/src/app/centroeducativo/ra/ra.page.html
+++ b/src/app/centroeducativo/ra/ra.page.html
@@ -13,16 +13,20 @@
   <form (ngSubmit)="submitForm()">
     <ion-toolbar>
       <ion-accordion-group expand="inset">
-        <ion-accordion value="first" *ngFor="let lista of this.ListaRa;let i=index">
-          <ion-item slot="header" color="floatbuton">
+        <ion-accordion value="first">
+          <ion-item slot="header" color="floatbuton" *ngFor="let lista of this.ListaRa;let i=index">
             <ion-label>{{i}}. {{ListaRa}} </ion-label>
           </ion-item>
           <ion-item class="ion-padding" slot="content">
-            <ion-label>a). se ha utilizado clases para ficheros </ion-label>
+            <ion-label>{{1}}. se ha utilizado clases para ficheros </ion-label>
           </ion-item>
         </ion-accordion>
       </ion-accordion-group>
     </ion-toolbar>
-
+    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+      <ion-button  (click)="this.addRa()" style="zoom:1.25">
+        <ion-icon name="add"></ion-icon>
+      </ion-button>
+    </ion-fab>
   </form>
 </ion-content>
