--- a/src/app/pages/modulo-lista-ra/modulo-lista-ra.page.html
+++ b/src/app/pages/modulo-lista-ra/modulo-lista-ra.page.html
@@ -1,28 +1,25 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Có. Boja {{modulos.cod_mod_boja}} </ion-title>
+    <ion-title>Nuevo RA  {{codmodul}}</ion-title>
     <!--Botón que permite cancelar y cerrar el modal-->
     <ion-buttons slot="end">
       <ion-button (click)="cancel()" [strong]="true"><ion-icon name="close-outline"></ion-icon></ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <div class="ion-padding">Resultado de Apredizaje de {{modulos.nombre}}</div>
 </ion-header>
 <ion-content class="ion-padding">
   <!--contenido dentro del modal que permite introducir datos y "guardarlos"-->
-  <form (ngSubmit)="submitForm()">
-    <ion-toolbar>
-      <ion-accordion-group expand="inset">
-        <ion-accordion value="first">
-          <ion-item slot="header" color="floatbuton">
-            <ion-label>{{1}}.        </ion-label>
-          </ion-item>
-          <ion-item class="ion-padding" slot="content">
-            <ion-label >a). se ha utilizado clases para ficheros </ion-label>
-          </ion-item>         
-        </ion-accordion>
-      </ion-accordion-group>
-    </ion-toolbar>
-
-  </form>
+  <form [formGroup]="formRA" (ngSubmit)="submitForm()">
+  <ion-item>
+    <ion-label position="floating">Nombre</ion-label>
+    <ion-input formControlName="resultado"> </ion-input>
+  </ion-item>
+  <ion-grid>
+    <ion-row>
+      <ion-col style="text-align: right;">
+        <ion-button shape="round" color="success" type="submit" [disabled]="this.formRA.pristine">Guardar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</form>
 </ion-content>
