actualizacion centros educativos keepsesion

--- a/src/app/pages/usuario-edit/usuario-edit.page.html
+++ b/src/app/pages/usuario-edit/usuario-edit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Crear </ion-title>
+    <ion-title>{{usuario}} </ion-title>
     <!--Botón que permite cancelar y cerrar el modal-->
     <ion-buttons slot="end">
       <ion-button (click)="cancel()" [strong]="true"><ion-icon name="close-outline"></ion-icon></ion-button>
