--- a/src/app/centroeducativo/modulo/modulo.page.html
+++ b/src/app/centroeducativo/modulo/modulo.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <!--nos permite dirigirnos a la pagina anterior a esta-->
-    <ion-title>Módulos</ion-title>
+    <ion-title>Módulos de </ion-title>
     <ion-buttons slot="end">
       <!--Botón que permite salir de la sesión actual con el ultimo usuario logueado-->
       <ion-button (click)="cerrarSesion()">
