--- a/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
+++ b/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
@@ -20,10 +20,10 @@
 
   <!--Lista de objetos de tipo periodos de practicas que al seleccionar un "ion-card" se abra un modal con el contenido de este periodo de practicas en concreto-->
   <div id="divlist">
-    <ion-card id="open-modal" *ngFor="let lista of this.filter;let i=index">
+    <ion-card id="open-modal" *ngFor="let lista of this.filter;let i=index" (click)="this.editPractica(lista)">
       <img src="assets/add.png" style="z-index: -1;" />
       <ion-card-header>
-        <ion-card-title> {{lista.id_empresa?.nombre}} -- {{lista.id_alumno?.nombre}} </ion-card-title>
+        <ion-card-title > {{lista.id_empresa?.nombre}} -- {{lista.id_alumno?.nombre}} </ion-card-title>
         <ion-card-subtitle > {{ lista.tiempo_inicio |date : 'd MMM, y' }} -- {{lista.tiempo_final |date : 'd MMM, y'}}</ion-card-subtitle>
       </ion-card-header>
     </ion-card>
