--- a/src/app/centroeducativo/titulo/titulo.page.html
+++ b/src/app/centroeducativo/titulo/titulo.page.html
@@ -19,7 +19,7 @@
   </div>
 <!--Lista de objetos de tipo título que al seleccionar un "ion-item" pasa a la siguiente ventana en el que muestra los módulos de este título en concreto-->
   <ion-list lines="inset" *ngFor="let lista of this.filter;let i=index">
-    <ion-item id="open-modal" expand="block" (click)="toTitleToModul()">
+    <ion-item id="open-modal" expand="block" (click)="toTitleToModul(lista)">
       <ion-label>
         <h1>{{lista.nombre}}</h1>
       </ion-label>
