--- a/src/app/pages/practicas/practicas.page.html
+++ b/src/app/pages/practicas/practicas.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>crear {{practica}}</ion-title>
+    <ion-title> {{practica}}</ion-title>
     <!--Botón que permite cancelar y cerrar el modal-->
     <ion-buttons slot="end">
       <ion-button (click)="cancel()" [strong]="true"><ion-icon name="close-outline"></ion-icon></ion-button>
