--- a/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
+++ b/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Periodo de {{practica}}</ion-title>
     <ion-buttons slot="end">
-       <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
+      <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
       </ion-button>
@@ -11,10 +11,10 @@
 </ion-header>
 
 <ion-content>
-  <div id="divsearch" >
-     <!--Busqueda y filtrado de periodos de practicas-->
+  <div id="divsearch">
+    <!--Busqueda y filtrado de periodos de practicas-->
     <ion-searchbar id="searchpp" placeholder="Buscar" animated (ionChange)="handleChange($event)"></ion-searchbar>
-      <!--Botón para agregar un nuevo periodo de practicas-->
+    <!--Botón para agregar un nuevo periodo de practicas-->
     <ion-button (click)="nuevaPractica()" style="zoom:1.25"><ion-icon name="duplicate-outline"></ion-icon></ion-button>
   </div>
 
@@ -23,8 +23,11 @@
     <ion-card id="open-modal" *ngFor="let lista of this.filter;let i=index" (click)="this.editPractica(lista)">
       <img src="assets/add.png" style="z-index: -1;" />
       <ion-card-header>
-        <ion-card-title > {{lista.id_empresa?.nombre}} -- {{lista.id_alumno?.nombre}} </ion-card-title>
-        <ion-card-subtitle > {{ lista.tiempo_inicio |date : 'd MMM, y' }} -- {{lista.tiempo_final |date : 'd MMM, y'}}</ion-card-subtitle>
+        <ion-card-title> {{lista.id_empresa?.nombre}}</ion-card-title>
+        <h4>{{lista.id_alumno?.nombre}}</h4>
+        <ion-card-subtitle> {{lista.tiempo_inicio |date : 'd MMM, y'}}</ion-card-subtitle>
+        <ion-card-subtitle> {{lista.tiempo_final |date : 'd MMM, y'}}</ion-card-subtitle>
+
       </ion-card-header>
     </ion-card>
   </div>
