--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -21,20 +21,19 @@
     </ion-fab>
   </div>
 
-  <ion-list>
-      <ion-item *ngFor="let user of searchedUser">
-        <ion-label>
-          <h2>{{user.nombre}}</h2>
-        </ion-label>
-      </ion-item>
-  </ion-list>
+  <ion-item *ngFor="let user of searchedUser">
+    <ion-label>
+      <h2>{{user.nombre}}</h2>
+    </ion-label>
+  </ion-item>
 
-  <ion-list>
+  <ion-list class="listUserCE">
     <ion-item *ngFor="let user of userCEList" (click)="editUserCE(user)">
-      <ion-label *ngIf="user">
+      <ion-label>
         <h2>{{user.nombre}}</h2>
       </ion-label>
     </ion-item>
   </ion-list>
+  
   
 </ion-content>
