--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -21,7 +21,7 @@
     display: flex;
     justify-content: right;
     align-items: flex-end;
-    margin-right: 15px;
+    margin-right: 18px;
     margin-top: -20px;
 }
 
@@ -33,4 +33,8 @@
 .editCE {
     font-size: 36px;
     margin-left: 20px;
+}
+
+.listUserCE {
+    margin-top: 18px;
 }
