--- a/src/app/pages/add-ce/add-ce.page.html
+++ b/src/app/pages/add-ce/add-ce.page.html
@@ -5,27 +5,30 @@
 </ion-header>
  
 <ion-content class="ion-padding">
-    <form [formGroup]="addUserCEForm" (ngSubmit)="onSubmit()">
-      <div style="display: flex; flex-direction: row;">
-        <ion-icon color="danger" *ngIf="editable=='true'" name="trash" style="zoom:1.5"></ion-icon>
-      </div>
-      <ion-item>
+  <form [formGroup]="addUserCEForm" (ngSubmit)="onSubmit()">
+    <div style="display: flex; flex-direction: row;">
+      <ion-icon color="danger" *ngIf="editable=='true'" name="trash" style="zoom:1.5"></ion-icon>
+    </div>
+
+    <ion-item>
         <ion-label position="floating">Nombre</ion-label>
         <ion-input type="text" formControlName="nombre"></ion-input>
-      </ion-item>
+    </ion-item>
       
-      <ion-item>
-        <ion-label position="floating">Documento</ion-label>
-        <ion-input type="text" formControlName="doc"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Documento</ion-label>
+      <ion-input type="text" formControlName="doc"></ion-input>
+    </ion-item>
         
-      <ion-item>
-        <ion-label position="floating">Correo electrónico</ion-label>
-        <ion-input type="email" formControlName="correo"></ion-input>
-      </ion-item>
-  
-      <ion-button type="submit" [disabled]="!addUserCEForm.valid">Save</ion-button>
-      <ion-button (click)="back()">Cancel</ion-button>
-    </form>
+    <ion-item>
+      <ion-label position="floating">Correo electrónico</ion-label>
+      <ion-input type="email" formControlName="correo"></ion-input>
+    </ion-item>
 
+    <div class="buttons">
+      <button class="btnSave" type="submit" [disabled]="!addUserCEForm.valid">SAVE</button>
+      <button class="btnCancel" (click)="back()">CANCEL</button>
+    </div>
+
+  </form>
 <ion-content>
