--- a/src/app/centroeducativo/ra/ra.page.html
+++ b/src/app/centroeducativo/ra/ra.page.html
@@ -14,17 +14,18 @@
     <ion-toolbar>
       <ion-accordion-group expand="inset">
         <ion-accordion value="first" *ngFor="let listaA of this.ListaRa;let ra=index">
-          <ion-item slot="header" color="floatbuton" >
-            <ion-label>{{ra}}. {{listaA.resultado}} </ion-label>
+          <ion-item slot="header">
+            {{[ra]}}. {{listaA.resultado}}
           </ion-item>
-          <ion-item class="ion-padding" slot="content" *ngFor="let listaE of this.ListaCe;let ce=index">
-            <ion-label>{{ce}}. {{listaE.descripcion}} </ion-label>
+          <ion-item slot="content" *ngFor="let listaE of this.ListaRa[ra].ce;let ce=index">
+            {{letras[ce]}}. {{listaE.descripcion}}
           </ion-item>
+
         </ion-accordion>
       </ion-accordion-group>
     </ion-toolbar>
     <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-      <ion-button (click)="this.addRa(nommodul)" style="zoom:1.25">
+      <ion-button id="addbuton" (click)="this.addRa(nommodul)" style="zoom:1.25">
         <ion-icon name="add"></ion-icon>
       </ion-button>
     </ion-fab>
