--- a/src/app/pages/edit-task/edit-task.page.html
+++ b/src/app/pages/edit-task/edit-task.page.html
@@ -16,9 +16,9 @@
     <ion-list>
       <ion-item>
         <ion-label position="floating">Alumno</ion-label>
-        <ion-select interface="popover" formControlName="taskuser" placeholder="Selecciona alumno">
+        <ion-select #select interface="popover" placeholder="Selecciona alumno">
           <ion-select-option
-            *ngFor="let periodo of this.periodos;let i=index" [value]="periodo.id" >{{periodo.id_alumno?.nombre}}</ion-select-option>
+            *ngFor="let periodo of this.periodos;let i=index" [value]="periodo.id">{{periodo.id_alumno?.nombre}}</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
@@ -28,7 +28,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Fecha</ion-label>
-      <ion-input formControlName="taskdate" placeholder="Fecha actual" ></ion-input>
+      <ion-input formControlName="taskdate" placeholder="Fecha actual"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Comentario:</ion-label>
