--- a/src/app/centroeducativo/alumno/alumno.page.html
+++ b/src/app/centroeducativo/alumno/alumno.page.html
@@ -15,8 +15,8 @@
     <!--Busqueda y filtrado de alumnos-->
     <ion-searchbar id="searchempresa" placeholder="Buscar" animated (ionChange)="handleChange($event)" ></ion-searchbar>
      <!--Botón para agregar un nuevo alumno-->
-    <ion-button (click)="nuevoalumno()" style="zoom:1.25"><ion-icon
-        name="duplicate-outline"></ion-icon></ion-button>
+    <ion-button (click)="nuevoalumno()" style="--background: #141414; zoom:1.25" ><ion-icon
+        name="duplicate-outline" style="color: white;"></ion-icon></ion-button>
   </div>
   <!--Lista de objetos de tipo alumno que al seleccionar un "ion-card" se abra un modal con el contenido de ese alumno en concreto-->
   <div id="divlist" *ngIf="permision">
