--- a/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
+++ b/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
@@ -15,7 +15,7 @@
     <!--Busqueda y filtrado de periodos de practicas-->
     <ion-searchbar id="searchpp" placeholder="Buscar" animated (ionChange)="handleChange($event)"></ion-searchbar>
     <!--Botón para agregar un nuevo periodo de practicas-->
-    <ion-button (click)="nuevaPractica()" style="zoom:1.25"><ion-icon name="duplicate-outline"></ion-icon></ion-button>
+    <ion-button (click)="nuevaPractica()"style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline" style="color: white;"></ion-icon></ion-button>
   </div>
 
   <!--Lista de objetos de tipo periodos de practicas que al seleccionar un "ion-card" se abra un modal con el contenido de este periodo de practicas en concreto-->
