--- a/src/app/pages/tarea-edit/tarea-edit.page.html
+++ b/src/app/pages/tarea-edit/tarea-edit.page.html
@@ -24,16 +24,16 @@
           </ion-select>
         </ion-item>
       </ion-list>
-  
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <ion-button shape="round" color="danger"  (click)="cancel()" >Cancelar</ion-button>
-        </ion-col>
-        <ion-col style="text-align: right;">
-          <ion-button shape="round" color="success" type="submit" [disabled]="this.formEncargo.pristine">Guardar</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+      
+      <ion-grid>
+        <ion-row>
+          <ion-col id="btn" style="text-align: left;">
+            <ion-button class="btnCancel" shape="round" color="danger" fill="outline" (click)="cancel()">CANCEL</ion-button>
+          </ion-col>
+          <ion-col  style="text-align: right;">
+            <ion-button class="btnSave" shape="round" color="success" type="submit" [disabled]="this.formEncargo.pristine">SAVE</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
   </form>
 </ion-content>
