--- a/src/app/empresa/alumnos/alumnos.page.html
+++ b/src/app/empresa/alumnos/alumnos.page.html
@@ -11,11 +11,12 @@
 
 <nav>
   <div style="display: flex; flex-direction: row;">
-    <ion-searchbar></ion-searchbar>
+    <ion-searchbar id="searchempresa" placeholder="Buscar" animated (ionChange)="handleChange($event)"></ion-searchbar>
   </div>
 </nav>
 
 <ion-content>
+  <div id="divsearch">
   <div class="container">
       <ion-card (click)="this.viewAlumn(alumno)" class="item" id="open-modal" *ngFor="let alumno of this.alumnos;let i=index">
         <ion-icon name="person-outline" style="zoom:10"></ion-icon>
@@ -25,4 +26,5 @@
         </ion-card-header>
       </ion-card>
   </div>
+</div>
 </ion-content>
