--- a/src/app/pages/edit-ce/edit-ce.page.html
+++ b/src/app/pages/edit-ce/edit-ce.page.html
@@ -16,16 +16,22 @@
       <ion-label position="floating">Documento</ion-label>
       <ion-input type="text" formControlName="doc"></ion-input>
     </ion-item>
-
+    
     <ion-item>
       <ion-label position="floating">Correo electrónico</ion-label>
       <ion-input type="email" formControlName="correo"></ion-input>
     </ion-item>
-    
-    <ion-button class="btnUpdate" type="submit" [disabled]="!formEdit.valid">UPDATE</ion-button>
-    <div style="display: flex; flex-direction: row;">
-      <ion-icon class="iDelete" (click)="deleteUserCE()" color="danger" *ngIf="editable=='false'" name="trash" style="zoom:1.5"></ion-icon> 
-    </div>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col id="btn" style="text-align: left;">
+          <ion-button class="btnCancel" shape="round" color="danger" fill="outline" (click)="deleteUserCE()">CANCEL</ion-button>
+        </ion-col>
+        <ion-col  style="text-align: right;">
+          <ion-button class="btnSave" shape="round" color="success" type="submit" [disabled]="!formEdit.valid">SAVE</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </form>
 
 </ion-content>
