--- a/src/app/pages/edit-ce/edit-ce.page.scss
+++ b/src/app/pages/edit-ce/edit-ce.page.scss
@@ -1,8 +1,3 @@
-.btnUpdate {
-    display: flex;
-    align-items: center;
-}
-
-.iDelete {
-    margin-right: 10px;
+.button{
+    text-align: center;
 }
