--- a/src/app/pages/edit-task/edit-task.page.html
+++ b/src/app/pages/edit-task/edit-task.page.html
@@ -34,9 +34,15 @@
       <ion-label position="floating">Comentario:</ion-label>
       <ion-input formControlName="taskcomment"></ion-input>
     </ion-item>
-    <div class="button">
-    <ion-button shape="round" color="primary" fill="outline" type="submit">Guardar</ion-button>
-    <ion-button shape="round" color="primary" fill="outline" (click)="delete()">Eliminar</ion-button>
-    </div>
+    <ion-grid>
+      <ion-row>
+        <ion-col id="btn" style="text-align: left;">
+          <ion-button class="btnCancel" shape="round" color="danger" fill="outline"(click)="delete()">DELETE</ion-button>
+        </ion-col>
+        <ion-col  style="text-align: right;">
+          <ion-button class="btnSave" shape="round" color="success" type="submit" [disabled]="!formTask.valid">SAVE</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </form>
 </ion-content>
