--- a/src/app/pages/edit-ce/edit-ce.page.html
+++ b/src/app/pages/edit-ce/edit-ce.page.html
@@ -25,7 +25,7 @@
     <ion-grid>
       <ion-row>
         <ion-col id="btn" style="text-align: left;">
-          <ion-button class="btnCancel" shape="round" color="danger" fill="outline" (click)="deleteUserCE()">CANCEL</ion-button>
+          <ion-button class="btnCancel" shape="round" color="danger" fill="outline" (click)="deleteUserCE()">DELETE</ion-button>
         </ion-col>
         <ion-col  style="text-align: right;">
           <ion-button class="btnSave" shape="round" color="success" type="submit" [disabled]="!formEdit.valid">SAVE</ion-button>
